Mon Nov 26 16:47:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/fisql/fisql.c:
	- do not use functions not availables

Mon Nov 26 09:43:03 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/tds/unittests/iconv_fread.c
	- small changes

Mon Nov 26 09:51:21 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/bcp.c: fix printf

Mon Nov 26 07:24:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/const_params.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/describecol.c src/odbc/unittests/freeclose.c:
	* src/odbc/unittests/insert_speed.c src/odbc/unittests/raiserror.c:
	* src/odbc/unittests/rpc.c src/odbc/unittests/scroll.c:
	* src/tds/challenge.c:
	- fix minor issues with 64bit

Thu Nov 22 09:43:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am:
	- do not filter symbols under MacOsX (avoid libtool problems)

Wed Nov 21 11:31:37 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/ctlib/blk.c: correctly test result of cs_convert
	* src/dblib/rpc.c: minor edits
	* src/dblib/unittests/bcp.c src/dblib/unittests/bcp.h:
	- test works for TDS 7.0.

Tue Nov 20 23:08:15 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/unittests/bcp.c:
	* src/dblib/dblib.c src/tds/convert.c src/tds/net.c:
	- small changes

Thu Nov 15 14:32:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/.cvsignore src/dblib/dblib.c:
	* src/dblib/unittests/Makefile.am src/dblib/unittests/null.c:
	- fix problem with empty string and TEXT
	- add a test to test empty/NULL behavior of dbdatlen/dbdata

Thu Nov 15 10:18:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: return error if no username given and no Kerberos

Tue Nov 13 10:13:06 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>