@@ -50,7 +50,7 @@
 
 #include "tds.h"
 
-static char software_version[] = "$Id: freeclose.c,v 1.5 2007-11-26 06:25:11 freddy77 Exp $";
+static char software_version[] = "$Id: freeclose.c,v 1.6 2007-11-26 18:12:31 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 /* this crazy test test that we do not send too much prepare ... */
@@ -100,7 +100,7 @@ init_fake_server(int ip_port)
 		return 1;
 	}
 	listen(s, 5);
-	err = pthread_create(&fake_thread, NULL, fake_thread_proc, (void *) s);
+	err = pthread_create(&fake_thread, NULL, fake_thread_proc, int2ptr(s));
 	if (err != 0) {
 		perror("pthread_create");
 		exit(1);
@@ -178,7 +178,7 @@ static enum { sending, receiving } flow = sending;
 static void *
 fake_thread_proc(void * arg)
 {
-	TDS_SYS_SOCKET s = (int) arg, server_sock;
+	TDS_SYS_SOCKET s = ptr2int(arg), server_sock;
 	socklen_t len;
 	char buf[128];
 	struct sockaddr_in sin;
