@@ -1,7 +1,7 @@
 #include "common.h"
 #include <assert.h>
 
-static char software_version[] = "$Id: insert_speed.c,v 1.5 2007-11-26 06:25:11 freddy77 Exp $";
+static char software_version[] = "$Id: insert_speed.c,v 1.6 2007-11-26 18:12:31 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 #define SQL_QUERY_LENGTH 80
@@ -64,7 +64,7 @@ insert_test_man(void)
 
 	char string[64];
 
-	if (!SQL_SUCCEEDED(SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, (SQLPOINTER) commit_off, SQL_IS_INTEGER))) {
+	if (!SQL_SUCCEEDED(SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, int2ptr(commit_off), SQL_IS_INTEGER))) {
 		fprintf(stderr, "Unable to set autocommit mode\n");
 		return (-1);
 	}
@@ -80,7 +80,7 @@ insert_test_man(void)
 	    ||
 	    !SQL_SUCCEEDED(SQLBindParameter
 			   (hstmt, 2, SQL_PARAM_INPUT, SQL_C_CHAR, SQL_VARCHAR, sizeof(string), 0, string, 0, &sql_nts))) {
-		SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, (SQLPOINTER) commit_on, SQL_IS_INTEGER);
+		SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, int2ptr(commit_on), SQL_IS_INTEGER);
 		SQLFreeHandle(SQL_HANDLE_STMT, hstmt);
 		fprintf(stderr, "unable to bind parameters\n");
 		return (-1);
@@ -88,7 +88,7 @@ insert_test_man(void)
 
 
 	if (!SQL_SUCCEEDED(SQLPrepare(hstmt, (SQLCHAR *) query, SQL_NTS))) {
-		SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, (SQLPOINTER) commit_on, SQL_IS_INTEGER);
+		SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, int2ptr(commit_on), SQL_IS_INTEGER);
 		SQLFreeHandle(SQL_HANDLE_STMT, hstmt);
 		fprintf(stderr, "Unable to prepare statement\n");
 		return (-1);
@@ -98,7 +98,7 @@ insert_test_man(void)
 		sprintf(string, "This is a test (%d)", (int) id);
 		if (!SQL_SUCCEEDED(SQLExecute(hstmt))) {
 			SQLEndTran(SQL_HANDLE_DBC, hstmt, SQL_ROLLBACK);
-			SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, (SQLPOINTER) commit_on, SQL_IS_INTEGER);
+			SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, int2ptr(commit_on), SQL_IS_INTEGER);
 			SQLFreeHandle(SQL_HANDLE_STMT, hstmt);
 			fprintf(stderr, "Unable to execute statement %d\n", (int) id);
 			return (-1);
@@ -106,7 +106,7 @@ insert_test_man(void)
 	}
 
 	SQLEndTran(SQL_HANDLE_DBC, Connection, SQL_COMMIT);
-	SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, (SQLPOINTER) commit_on, SQL_IS_INTEGER);
+	SQLSetConnectAttr(Connection, SQL_ATTR_AUTOCOMMIT, int2ptr(commit_on), SQL_IS_INTEGER);
 	SQLFreeHandle(SQL_HANDLE_STMT, hstmt);
 	return (0);
 }
