@@ -1,3 +1,11 @@
+Mon Nov 26 19:11:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* configure.ac include/tdsodbc.h src/odbc/odbc.c:
+	* src/odbc/unittests/array_out.c src/odbc/unittests/common.h:
+	* src/odbc/unittests/describecol.c src/odbc/unittests/freeclose.c:
+	* src/odbc/unittests/insert_speed.c src/odbc/unittests/timeout.c:
+	* src/odbc/unittests/timeout3.c src/odbc/unittests/type.c:
+	- minor fixes for 64bit
+
 Mon Nov 26 16:47:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac src/apps/fisql/fisql.c:
 	- do not use functions not availables
